Bug 526875: Make nsSMILCSSValueType::Add accept just-initialized added values (which represent zero). r=roc